--- a/Presentation/POP_2017_STAR_Data_Presentation.tex
+++ b/Presentation/POP_2017_STAR_Data_Presentation.tex
@@ -158,7 +158,7 @@ University of Washington$^2$ \\
   \centering
   %\begin{tabular}{l>{\centering}p{0.25in}>{\centering}p{0.25in}>{\centering}p{0.1in}>{\centering}p{0.1in}>{\centering}p{0.1in}>{\centering}p{0.1in}}
   \begin{tabular}{p{0.4in}p{0.4in}p{0.4in}p{0.4in}p{0.4in}p{0.4in}p{0.6in}}
-  Year & CA & OR & WA & At-sea & Survey & Total Landings \\ 
+  Year & CA & OR & WA & At-sea hake & Survey & Total Landings \\ 
   \hline
   2007 & 0.15 & 83.65 & 45.12 & 4.05 & 0.58 & 133.55 \\ 
   2008 & 0.39 & 58.64 & 16.61 & 15.93 & 0.80 & 92.36 \\ 
@@ -173,6 +173,8 @@ University of Washington$^2$ \\
   \hline
   \end{tabular}
   \end{table}
+  Approximately 70\% of the landings are from Oregon.\\
+  Vast majority of landings are from bottom-trawl gear.
 \end{frame}
 
 
@@ -231,6 +233,7 @@ University of Washington$^2$ \\
       %\begin{itemize}
       %  \item 
       %\end{itemize}
+    \item Landing History
     \item Maturity and Fecundity
     \item Fleet and Survey Selectivities 
       %\begin{itemize}
@@ -242,24 +245,25 @@ University of Washington$^2$ \\
 
 \begin{frame}{2011 Model Data "Update"}
   \begin{itemize}
-    \item Added layers of new data cumulatively to while retaining 2011 modeling assumptions
+    \item Added layers of new data cumulatively while retaining 2011 modeling assumptions
   \end{itemize}
   \begin{center}
     \includegraphics[scale = 0.42]{figures/Data_Bratio_uncertainty.png}
   \end{center}
 \end{frame}
 
-\begin{frame}{Model Sensitivities - Scale}
-  \begin{center}
-    \includegraphics[scale = 0.40]{figures/SSB_sensitivities_1.png}
-  \end{center}
+\begin{frame}{2017 Base Model Sensitivities}
+  %\begin{center}
+    \includegraphics[scale = 0.28]{figures/SSB_sensitivities_1.png}
+    \includegraphics[scale = 0.28]{figures/Bratio_sensitivites_1.png}
+  %\end{center}
 \end{frame}
 
-\begin{frame}{Model Sensitivities - Relative}
-  \begin{center}
-    \includegraphics[scale = 0.40]{figures/Bratio_sensitivites_1.png}
-  \end{center}
-\end{frame}
+%\begin{frame}{Model Sensitivities - Relative}
+%  \begin{center}
+%    \includegraphics[scale = 0.40]{figures/Bratio_sensitivites_1.png}
+%  \end{center}
+%\end{frame}
 
 %\begin{frame}{Model Sensitivities - Indices}
 %  \begin{center}
@@ -286,7 +290,6 @@ University of Washington$^2$ \\
     \item{NWFSC shelf-slope age data}
       \begin{itemize}
         \item Treating these data as either conditional age-at-length or as marginals results in differing estimates of $R_0$ and final stock status.
-        \item Marginal ages are essentially weighted out of the model using Francis weighting.
       \end{itemize}
   \end{itemize}
 \end{frame}
@@ -303,17 +306,16 @@ University of Washington$^2$ \\
   \begin{column}{0.5\textwidth}
       \begin{itemize}
         \item Distributed from  Alaska Aleutian Islands to Northern California
-        \item Typically 200 - 400 meters during summer months
+        \item Typically disctributed between 200 - 400 meters during summer months
         \item Semi-demersal and can be pelagic
         \item Both sexes move to deeper water with age
       \end{itemize}
   \end{column}
   
   \begin{column}{0.5\textwidth}
-    \includegraphics[height = 1in]{C:/Users/Chantel.Wetzel/Documents/GitHub/POP_2017/Sebastes_alutus.png}
-    %\includegraphics[height = 1in]{Sebastes_alutus.png}
+    \includegraphics[scale = 0.25]{C:/Users/Chantel.Wetzel/Documents/GitHub/POP_2017/Sebastes_alutus.png}
     \begin{itemize}
-        \item Female move to deeper waters post-spawning during winter months and return inshore in spring.
+        \item Females move to deeper waters post-spawning during winter months and return inshore in spring.
       \end{itemize}
   \end{column}
 \end{columns}
@@ -323,7 +325,7 @@ University of Washington$^2$ \\
 \subsection{Maturity}
 \begin{frame}{Maturity}
 \begin{columns}
-  \begin{column}{0.5\textwidth}
+  \begin{column}{0.55\textwidth}
       Functional maturity-at-length
       \begin{itemize}
         \item Categorized mature and immature fish based on the proportion of vitellogenin in the cytoplasm and atretic cells
@@ -332,9 +334,9 @@ University of Washington$^2$ \\
       \end{itemize}
   \end{column}
   
-  \begin{column}{0.5\textwidth}
+  \begin{column}{0.45\textwidth}
   \begin{center}
-    \includegraphics[height = 2.75in, width = 2.5in]{figures/Functional_Maturity.png}
+    \includegraphics[scale = 0.40]{figures/Functional_Maturity.png}
   \end{center}
   \end{column}
 \end{columns}
@@ -342,10 +344,9 @@ University of Washington$^2$ \\
 
 \begin{frame}{Maturity Comparison}
   \begin{center}
-    %\includegraphics[height = 2.75in, width = 3.5in]{figures/Maturity_Comparison.png}
-    \includegraphics[scale = 0.32]{figures/Maturity_Comparison.png}
+    \includegraphics[scale = 0.3]{figures/Maturity_Comparison.png}
   \end{center}
-  *Sensitivity assumed maturity shown to not have a large impact on results
+  *Sensitivity to assumed maturity shown to not have a large impact on results
 \end{frame}
 
 \subsection{Fecundity}
@@ -365,7 +366,7 @@ University of Washington$^2$ \\
 
 \begin{frame}{Length-at-age}
   \begin{center}
-  \includegraphics[scale = 0.5]{figures/LengthAgeAll_2.png}
+  \includegraphics[scale = 0.45]{figures/LengthAgeAll_2.png}
   \end{center}
 \end{frame}
 
@@ -375,7 +376,7 @@ University of Washington$^2$ \\
     \begin{column}{0.35\textwidth}
       \begin{itemize}
       \item Oldest age: 120 by the fishery (2007)
-      \item Next oldest fish range from 90-103 collected by fishery and At-sea hake between 1981-2010
+      \item Next oldest fish range from 90-103 collected by the fishery or the at-sea hake fishery between 1981-2010
       \end{itemize}
     \end{column}
     \begin{column}{0.65\textwidth}
@@ -457,208 +458,113 @@ University of Washington$^2$ \\
   \end{center}
 \end{frame}
 
-%\begin{frame}{Survey Indices: 2011 vs. 2017}
-%\end{frame}
 
 %---------------------------------------------------------------------------------
-\section{Length Compositions}
+\section{Composition Data}
 %---------------------------------------------------------------------------------
-\subsection{Fishery Lengths}
-\begin{frame}{Fishery Length Data}
+\subsection{Fishery Data}
+\begin{frame}{Fishery Length and Age Data}
   Fishery length data used in the 2017 assessment:
   \begin{itemize}
     \item Fishery: bottom trawl, mid-water trawl, fixed gear
       \begin{itemize}
-        \item Retained Lengths 1966-2016
-        \item Discarded Lengths 1986 (Pikitch), 2004-2015
+        \item Retained Lengths: 1966-2016
+        \item Discarded Lengths: 1986 (Pikitch), 2004-2015
+        \item Ages: 1981-1988, 1994, 1999-2016
       \end{itemize}
     \item At-sea hake fishery
       \begin{itemize}
-        \item All (Retained and Discarded) Lengths 2003-2016
+        \item All (Retained and Discarded) Lengths: 2003-2016
+        \item Ages: 2003, 2006, 2007, 2014
       \end{itemize}
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Fishery Lengths: Retained}
-  \begin{center}
-    \includegraphics[scale = 0.50]{r4ss/comp_lendat_bubflt1mkt2_page4.png}
-  \end{center}
-  %\onslide<2->
-  %\begin{tikzpicture}[remember picture, overlay, shift = {(current page.center)}]
-  %  \draw[black, thick, -] (3,   -0.6) -- (3.4, -0.1);
-  %  \draw[black, thick, -] (-2,   -0.6) -- (-1.6, -0.1);
-  %\end{tikzpicture}
-\end{frame}
-
 \begin{frame}{Fishery Lengths: Discarded}
-  \begin{center}
-    \includegraphics[scale = 0.50]{r4ss/comp_lendat_bubflt1mkt1.png}
-  \end{center}
+   \begin{center}
+   \includegraphics[scale = 0.50]{r4ss/comp_lendat_bubflt1mkt1.png}
+   \end{center}
 \end{frame}
 
-\begin{frame}{At-sea hake lengths}
-  \begin{center}
-    \includegraphics[scale = 0.50]{r4ss/comp_lendat_bubflt2mkt0.png}
-  \end{center}
+\begin{frame}{Fishery Lengths and Ages: Retained}
+   \includegraphics[scale = 0.37]{r4ss/comp_lendat_bubflt1mkt2_page4.png}
+   \includegraphics[scale = 0.37]{r4ss/comp_agedat_bubflt1mkt2_page2.png}
 \end{frame}
 
-\subsection{Survey Lengths}
+
+\begin{frame}{At-sea hake}
+  \includegraphics[scale = 0.37]{r4ss/comp_lendat_bubflt2mkt0.png}
+  \includegraphics[scale = 0.37]{r4ss/comp_agedat_bubflt2mkt0.png}
+\end{frame}
+
+\subsection{Survey Length and Age Data}
 \begin{frame}{Survey Length Data}
   Survey length data used in the 2017 assessment:
   \begin{itemize}
     \item Pacific ocean perch survey
       \begin{itemize}
-        \item 1979 and 1985
+        \item Lengths: 1979 and 1985
+        \item Ages: 1985
       \end{itemize}
     \item Triennial shelf survey
       \begin{itemize}
-        \item 1980, 1983, 1986, 1989, 1992, 1995, 1998, 2001, 2004
+        \item Lengths: 1980, 1983, 1986, 1989, 1992, 1995, 1998, 2001, 2004
+        \item Ages: 1989, 1992, 1995, 1998, 2001, 2004
       \end{itemize}
     \item AFSC slope survey
       \begin{itemize}
-        \item 1996, 1997, 1999-2001
+        \item Lengths: 1996, 1997, 1999-2001
       \end{itemize}
     \item NWFSC slope survey
       \begin{itemize}
-        \item 2001 and 2002
+        \item Lengths: 2001 and 2002
+        \item Ages: 2001 and 2002
       \end{itemize}
     \item NWFSC shelf-slope survey
       \begin{itemize}
-        \item 2003-2016
+        \item Lengths: 2003-2016
+        \item Ages: 2003-2016
       \end{itemize}
   \end{itemize}
 \end{frame}
+
 
 \begin{frame}{Pacific ocean perch survey lengths}
-  \begin{center}
-    \includegraphics[scale = 0.50]{r4ss/comp_lendat_bubflt4mkt0.png}
-  \end{center}
+  \includegraphics[scale = 0.37]{r4ss/comp_lendat_bubflt4mkt0.png}
+  \includegraphics[scale = 0.37]{r4ss/comp_agedat_bubflt4mkt0.png}
 \end{frame}
 
-\begin{frame}{Triennial shelf survey lengths}
-  \begin{center}
-    \includegraphics[scale = 0.50]{r4ss/comp_lendat_bubflt5mkt0.png}
-  \end{center}
+\begin{frame}{Triennial shelf survey }
+  \includegraphics[scale = 0.37]{r4ss/comp_lendat_bubflt5mkt0.png}
+  \includegraphics[scale = 0.37]{r4ss/comp_agedat_bubflt5mkt0.png}
 \end{frame}
 
-\begin{frame}{AFSC slope survey lengths}
-  \begin{center}
-    \includegraphics[scale = 0.50]{r4ss/comp_lendat_bubflt6mkt0.png}
-  \end{center}
+\begin{frame}{AFSC slope survey }
+  \includegraphics[scale = 0.37]{r4ss/comp_lendat_bubflt6mkt0.png}
+  
 \end{frame}
 
-\begin{frame}{NWFSC slope survey lengths}
-  \begin{center}
-    \includegraphics[scale = 0.50]{r4ss/comp_lendat_bubflt7mkt0.png}
-  \end{center}
+\begin{frame}{NWFSC slope survey }
+    \includegraphics[scale = 0.37]{r4ss/comp_lendat_bubflt7mkt0.png}
+    \includegraphics[scale = 0.37]{r4ss/comp_agedat_bubflt7mkt0.png}
+
 \end{frame}
 
-\begin{frame}{NWFSC shelf-slope survey lengths}
-  \begin{center}
-    \includegraphics[scale = 0.50]{r4ss/comp_lendat_bubflt8mkt0.png}
-  \end{center}
+\begin{frame}{NWFSC shelf-slope survey }
+  \includegraphics[scale = 0.37]{r4ss/comp_lendat_bubflt8mkt0.png}
+  \includegraphics[scale = 0.37]{r4ss/comp_gstagedat_bubflt8mkt0.png}
 \end{frame}
 
-\begin{frame}{Aggregated lengths by source}
-  \begin{center}
-    \includegraphics[scale = 0.50]{r4ss/comp_lendat__aggregated_across_time.png}
-  \end{center}
-\end{frame}
-
-%---------------------------------------------------------------------------------
-\section{Age Compositions}
-%---------------------------------------------------------------------------------
-\subsection{Fishery Ages}
-\begin{frame}{Fishery Age Data}
-  Fishery age data used in the 2017 assessment:
-  \begin{itemize}
-    \item Fishery: bottom trawl, mid-water trawl, fixed gear
-      \begin{itemize}
-        \item 1981-1988, 1994, 1999-2016
-      \end{itemize}
-    \item At-sea hake fishery
-      \begin{itemize}
-        \item 2003, 2006, 2007, 2014
-      \end{itemize}
-  \end{itemize}
-\end{frame}
-
-\begin{frame}{Fishery Ages}
-  \begin{center}
-    \includegraphics[scale = 0.50]{r4ss/comp_agedat_bubflt1mkt2_page2.png}
-  \end{center}
-\end{frame}
-
-\begin{frame}{At-sea hake Ages}
-  \begin{center}
-    \includegraphics[scale = 0.50]{r4ss/comp_agedat_bubflt2mkt0.png}
-  \end{center}
-\end{frame}
-
-\subsection{Survey Ages}
-\begin{frame}{Survey Age Data}
-  Survey age data used in the 2017 assessment:
-  \begin{itemize}
-    \item Pacific ocean perch survey
-      \begin{itemize}
-        \item 1985
-      \end{itemize}
-    \item Triennial shelf survey
-      \begin{itemize}
-        \item 1989, 1992, 1995, 1998, 2001, 2004
-      \end{itemize}
-    \item NWFSC slope survey
-      \begin{itemize}
-        \item 2001 and 2002
-      \end{itemize}
-    \item NWFSC shelf-slope survey
-      \begin{itemize}
-        \item 2003-2016
-      \end{itemize}
-  \end{itemize}
-\end{frame}
-
-\begin{frame}{Pacific ocean perch ages}
-  \begin{center}
-    \includegraphics[scale = 0.50]{r4ss/comp_agedat_bubflt4mkt0.png}
-  \end{center}
-\end{frame}
-
-\begin{frame}{Triennial shelf survey ages}
-  \begin{center}
-    \includegraphics[scale = 0.50]{r4ss/comp_agedat_bubflt5mkt0.png}
-  \end{center}
-\end{frame}
-
-\begin{frame}{NWFSC slope ages}
-  \begin{center}
-    \includegraphics[scale = 0.50]{r4ss/comp_agedat_bubflt7mkt0.png}
-  \end{center}
-\end{frame}
-
-\begin{frame}{NWFSC shelf-slope ages - marginal view}
-  \begin{center}
-    \includegraphics[scale = 0.50]{r4ss/comp_gstagedat_bubflt8mkt0.png}
-  \end{center}
-\end{frame}
 
 \begin{frame}{NWFSC shelf-slope conditional age-at-length}
-  \begin{center}
-    \includegraphics[scale = 0.50]{r4ss/comp_condAALdat_bubflt8mkt0_page1.png}
-  \end{center}
-\end{frame}
-
-\begin{frame}{NWFSC shelf-slope conditional age-at-length}
-  \begin{center}
-    \includegraphics[scale = 0.50]{r4ss/comp_condAALdat_bubflt8mkt0_page2.png}
-  \end{center}
+    \includegraphics[scale = 0.37]{r4ss/comp_condAALdat_bubflt8mkt0_page1.png}
+    \includegraphics[scale = 0.37]{r4ss/comp_condAALdat_bubflt8mkt0_page2.png}
 \end{frame}
 
 
-\begin{frame}{Aggregated Ages by Source}
-  \begin{center}
-    \includegraphics[scale = 0.50]{figures/comp_agedat__aggregated_across_time.png}
-  \end{center}
+\begin{frame}{Aggregated data by source}
+    \includegraphics[scale = 0.37]{r4ss/comp_lendat__aggregated_across_time.png}
+    \includegraphics[scale = 0.37]{figures/comp_agedat__aggregated_across_time.png}
 \end{frame}
 
 
