--- a/Presentation/POP_2017_STAR_Data_Presentation.tex
+++ b/Presentation/POP_2017_STAR_Data_Presentation.tex
@@ -575,7 +575,29 @@ University of Washington$^2$ \\
   \end{center}
 \end{frame}
 
-  
-  
+\begin{frame}
+
+\end{frame}
+
+%---------------------------------------------------------------------------
+\section*{Appendix}
+%-----------------------------------------------------------------------------
+\begin{frame}{VAST vs. Bayesian Delta-GLMM Indices}
+  \begin{center}
+    \includegraphics[scale = 0.30]{figures/Index_Comparison.png}
+  \end{center}
+\end{frame}  
+
+\begin{frame}{Designed Based vs. VAST Indices}
+  \begin{center}
+    \includegraphics[scale = 0.30]{figures/Index_DesignBased_Comparison.png}
+  \end{center}
+\end{frame} 
+
+\begin{frame}{2011 vs. 2017 NWFSC shelf-slope index}
+  \begin{center}
+    \includegraphics[scale = 0.20]{figures/NWFSC_shelf_slope_2011_2017.png}
+  \end{center}
+\end{frame} 
   
 \end{document}
